--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "babel": "^5.6.14",
     "babel-core": "^5.6.15",
     "babel-loader": "^5.3.1",
+    "css-loader": "^0.15.2",
     "node-libs-browser": "^0.5.2",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
     "webpack": "^1.10.1"
   },
   "scripts": {
-    "webpack": "webpack --config config/webpack.config.js",
-    "webpack-watch": "webpack --config config/webpack.js --watch --colors"
+    "build": "webpack --config config/webpack.config.js",
+    "watch": "webpack --config config/webpack.js --watch --colors"
   }
 }
