--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^5.6.15",
     "babel-loader": "^5.3.1",
     "css-loader": "^0.15.2",
+    "extract-text-webpack-plugin": "^0.8.2",
     "node-libs-browser": "^0.5.2",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
