--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "css-loader": "^0.15.2",
     "extract-text-webpack-plugin": "^0.8.2",
     "node-libs-browser": "^0.5.2",
+    "react-hot-loader": "^1.2.8",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
-    "webpack": "^1.10.1"
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
